--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,8 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-  "start": "node src/server.js",
+"scripts": {
+  "start": "npm start --prefix backend",
   "test": "echo \"Error: no test specified\" && exit 1"
 },
   "keywords": [],
