--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,26 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
-"scripts": {
-  "start": "npm start --prefix backend",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
-  "keywords": [],
-  "author": "",
+  "description": "API RESTful para a plataforma de mentoria.",
+  "main": "src/server.js",
+  "scripts": {
+    "start": "node src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "api",
+    "nodejs",
+    "express",
+    "postgresql"
+  ],
+  "author": "Angelo Silvano",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "knex": "^3.1.0",
-    "pg": "^8.16.3"
+    "pg": "^8.12.0"
   }
 }
