--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "mentoring",
+  "name": "mentoring-tcc",
   "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
+  "description": "Projeto principal da plataforma Mentoring",
+ "scripts": {
+  "start": "npm start --prefix backend",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
+  "author": "Angelo Silvano",
   "license": "ISC",
-  "description": "",
+
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "knex": "^3.1.0",
-    "pg": "^8.16.3"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.9"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
+
 }
