--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/angelosilvanno/Mentoring#readme",
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
     "typescript": "^5.9.2"
   },
   "dependencies": {
